fix: increase header z-index.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,6 @@
 	flex-direction: column;
 	height: 100%;
 	justify-content: center;
-	margin-top: 44px;
 	overflow: hidden;
 	padding: 16px;
 	width: 100%;
